# Project-Verdict

./: .gitignore  README.md  implementation_plan.md  walkthrough.md
backend/: API_CONTRACT.md  ARCHITECTURE.md  AUDIT_REPORT.md  AUDIT_REPORT_PHASE_1E.md  DEVELOPMENT.md  PHASE_1B_CHANGES.md  PHASE_1C_CHANGES.md  ROADMAP.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  a835a2231aa6_initial_schema_8_tables.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  middleware.py
backend/app/core/: notifications.py  scheduler.py  storage.py
backend/app/jobs/: reminders.py
backend/app/models/: __init__.py  app_state.py  base.py  category.py  daily_verdict.py  enums.py  evidence.py  reminder.py  task.py  task_instance.py  task_metrics.py
backend/app/repositories/: __init__.py  app_state.py  base.py  category.py  evidence.py  reminder.py  task.py  task_instance.py
backend/app/routers/: __init__.py  categories.py  evidence.py  health.py  instances.py  reminders.py  tasks.py
backend/app/schemas/: __init__.py  category.py  evidence.py  reminder.py  responses.py  task.py  task_instance.py
backend/app/services/: __init__.py  category_service.py  evidence_service.py  generation_service.py  notification_service.py  reminder_service.py  task_instance_service.py  task_service.py
backend/tests/: __init__.py  conftest.py  test_categories.py  test_evidence.py  test_generation.py  test_health.py  test_reminders.py  test_tasks.py
(+1 files in other folders)
